--- a/index.html
+++ b/index.html
@@ -211,22 +211,22 @@
         <div id="toolbar">
             <!-- Search -->
             <div class="filter-item">
-                <label>Search Player:</label>
+                <label>Search Player</label>
                 <input type="text" id="playerSearch" placeholder="Enter player name...">
             </div>
 
             <!-- Seal Points Filter -->
             <div class="filter-item">
-                <label>Seal Points:</label>
+                <label>Seal Points</label>
                 <div class="filter-group" data-filter="seal">
-                    <button data-value="50" class="active">50</button>
-                    <button data-value="200">200</button>
+                    <button data-value="50">50</button>
+                    <button data-value="200" class="active">200</button>
                 </div>
             </div>
 
             <!-- Changed Only Filter -->
             <div class="filter-item">
-                <label>Show:</label>
+                <label>Show</label>
                 <div class="filter-group" data-filter="changed">
                     <button data-value="all" class="active">All</button>
                     <button data-value="changed">Changed</button>
@@ -235,7 +235,7 @@
 
             <!-- Order By -->
             <div class="filter-item">
-                <label>Order By:</label>
+                <label>Order By</label>
                 <div class="filter-group" data-filter="orderBy">
                     <button data-value="limited" class="active">Limited</button>
                     <button data-value="rare">Rare</button>
@@ -244,7 +244,7 @@
 
             <!-- Sort Direction -->
             <div class="filter-item">
-                <label>Sort:</label>
+                <label>Sort</label>
                 <div class="filter-group" data-filter="direction">
                     <button data-value="asc" class="active">Low to High</button>
                     <button data-value="desc">High to Low</button>
